--- a/codeblog/src/main/resources/templates/posts.html
+++ b/codeblog/src/main/resources/templates/posts.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -27,9 +27,20 @@
             </ol>
         </nav>
 
-        <div class="card shadow-sm bg-white rounded" style="margin-top: 20px;">
+        <div class="card shadow-sm bg-white rounded" style="margin-top: 20px;" th:each="post : ${posts}">
             <div class="card-body">
-                Teste
+                <p class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">
+                    <span th:text="${post.autor}"></span>
+                    <span th:text="${post.dataCriacao}"></span>
+                </p>
+                <a href="#">
+                    <h4 class="card-title" style="font-weight: bold; color: black; padding-top: 5px;">
+                        <span th:text="${post.titulo}"></span>
+                    </h4>
+                </a>
+                <p class="card-text">
+                    <span th:utext="${#strings.abbreviate(post.texto, 400)}"></span>
+                </p>
             </div>
         </div>
 
