--- a/codeblog/src/main/resources/templates/posts.html
+++ b/codeblog/src/main/resources/templates/posts.html
@@ -1,45 +1,48 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Codeblog</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
+
 <body>
 
-<header>
-    <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1" style="font-weight: bold;">Codeblog</span>
-    </nav>
-</header>
-
-<section>
-    <div class="container" style="width: 60%; padding-bottom: 30px">
-
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb" style="background-color: white; padding-left: 0px;">
-                <li class="breadcrumb-item active" aria-current="page">Posts</li>
-            </ol>
+    <header>
+        <nav class="navbar navbar-light bg-light">
+            <span class="navbar-brand mb-0 h1" style="font-weight: bold;">Codeblog</span>
         </nav>
+    </header>
 
-        <div class="card shadow-sm bg-white rounded" style="margin-top: 20px;" th:each="post : ${posts}">
-            <div class="card-body">
-                <p class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">
-                    <span th:text="${post.autor}"></span>
-                    <span th:text="${post.dataCriacao}"></span>
-                </p>
-                <a th:href="${(#mvc.url('BC#getPostDetails').arg(0, post.id)).build()}">
-                    <h4 class="card-title" style="font-weight: bold; color: black; padding-top: 5px;">
-                        <span th:text="${post.titulo}"></span>
-                    </h4>
-                </a>
-                <p class="card-text">
-                    <span th:utext="${#strings.abbreviate(post.texto, 400)}"></span>
+    <section>
+        <div class="container" style="width: 60%; padding-bottom: 30px">
+
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb" style="background-color: white; padding-left: 0px;">
+                    <li class="breadcrumb-item active" aria-current="page">Posts</li>
+                </ol>
+            </nav>
+
+            <div class="card shadow-sm bg-white rounded" style="margin-top: 20px;" th:each="post : ${posts}">
+                <div class="card-body">
+                    <p class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">
+                        <span th:text="${post.autor}"></span>
+                        <span th:text="${post.dataCriacao}"></span>
+                    </p>
+                    <a th:href="${(#mvc.url('CC#getPostDetails').arg(0, post.id)).build()}">
+                        <h4 class="card-title" style="font-weight: bold; color: black; padding-top: 5px;">
+                            <span th:text="${post.titulo}"></span>
+                        </h4>
+                    </a>
+                    <p class="card-text">
+                        <span th:utext="${#strings.abbreviate(post.texto, 400)}"></span>
                 </p>
             </div>
         </div>
